Add getting started

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,9 @@
 <nav>
     <div class="wrap">
         <div class="images">
-            greenfrogmc
+            <a href="/">
+                <img src="/greenfrog.webp" alt="Logo of greenfrogmcbe">
+            </a>
         </div>
         <div class="links">
             <a href="/">
@@ -12,14 +14,6 @@
             </a>
             <a href="/docs/installation">
                 Docs
-            </a>
-        </div>
-        <div class="buttons">
-            <a href="/download" class="download">
-                Download
-            </a>
-            <a href="/discord" class="discord">
-                Discord
             </a>
         </div>
     </div>
