Add basic plugin

--- a/src/Layouts/DocsLayout.astro
+++ b/src/Layouts/DocsLayout.astro
@@ -35,6 +35,9 @@ const { frontmatter } = Astro.props
 	<link rel="icon" href="/greenfrog.webp">
 </head>
 <body>
+    <div class="warning">
+        Not affiliated with GreenFrog!
+    </div>  
 	<Navigation />
     <div class="wrap">
         <aside>
