--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -12,18 +12,29 @@ body {
     min-height: 100vh;
     background-color: rgb(42, 44, 57);
 }
+.warning {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    background-color: rgb(204, 80, 80);
+    padding: 10px;
+    text-align: center;
+    z-index: 999999;
+}
 /*
     Navigation
 */
 nav {
     background-color: rgba(42, 44, 57, 0.774);
     font-size: 18px;
-    position: fixed;
+    position: sticky;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100px;
     display: flex;
+    margin-top: 40px;
 }
 nav .wrap {
     padding: 16px;
@@ -75,7 +86,9 @@ header h1 {
     width: 100%;
     max-width: 70em;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: minmax(auto, 250px) auto;
+    padding-bottom: 100px;
+    line-height: 1.7;
 }
 /*
     Aside
@@ -106,6 +119,7 @@ main {
     margin-left: 0px;
     width: 100%;
     max-width: 45em;
+    padding: 10px;
     margin-top: 150px;
 }
 main h1, h2 {
