--- a/src/Layouts/DocsLayout.astro
+++ b/src/Layouts/DocsLayout.astro
@@ -39,7 +39,7 @@ const { frontmatter } = Astro.props
         Not affiliated with GreenFrog!
     </div>  
 	<Navigation />
-    <div class="wrap">
+    <div class="wrapper">
         <aside>
                 {json.map(item => (
                     <a href={item.href}>
