--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -67,7 +67,7 @@ nav .links a {
     Header
 */
 header {
-    min-height: 100vh;
+    min-height: 70vh;
     background-color: rgb(42, 44, 57);
     display: flex;
     flex-direction: column;
@@ -79,6 +79,10 @@ header h1 {
     font-size: 50px;
     margin-bottom: 40px;
 }
+header img {
+    width: 100%;
+    max-width: 400px;
+}
 /*
     Wrapper
 */
@@ -87,7 +91,7 @@ header h1 {
     max-width: 70em;
     display: grid;
     grid-template-columns: minmax(auto, 250px) auto;
-    padding-bottom: 100px;
+    padding-bottom: 40px;
     line-height: 1.7;
 }
 /*
