--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -34,7 +34,8 @@ nav {
     width: 100%;
     height: 100px;
     display: flex;
-    margin-top: 40px;
+    margin-top: 30px;
+    z-index: 99999;
 }
 nav .wrap {
     padding: 16px;
@@ -67,6 +68,7 @@ nav .links a {
     Header
 */
 header {
+    width: 100%;
     min-height: 70vh;
     background-color: rgb(42, 44, 57);
     display: flex;
