--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -34,7 +34,7 @@ nav {
     width: 100%;
     height: 100px;
     display: flex;
-    margin-top: 30px;
+    margin-top: 0px;
     z-index: 99999;
 }
 nav .wrap {
@@ -68,9 +68,12 @@ nav .links a {
     Header
 */
 header {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    min-height: 70vh;
-    background-color: rgb(42, 44, 57);
+    min-height: 100vh;
+    background: url("/greenfrogbg.webp");
     display: flex;
     flex-direction: column;
     justify-content: center;
