--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,5 +15,38 @@ import Navigation from "../components/Navigation.astro"
 <body>
 	<Navigation />
     <Header />
+    <main>
+        <h1>
+            Features
+        </h1>
+        <div class="cards">
+            <div class="card">
+                <div class="image">
+                    <img src="/greenfrogbg.webp" alt="">
+                </div>
+                <div class="content">
+                    <h3>
+                        Speed
+                    </h3>
+                    <p>
+                        Start your server with GreenFrog in less than a second.
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image">
+                    <img src="/greenfrogbg.webp" alt="">
+                </div>
+                <div class="content">
+                    <h3>
+                        Vanilla gameplay
+                    </h3>
+                    <p>
+                        GreenFrog provides all the features you see in vanilla Minecraft.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
