Fix accidentally not comitted things

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,12 +36,51 @@ import Navigation from "../components/Navigation.astro"
                 type="feature"
             />
         </div>
+        <h1>
+            Documentation
+        </h1>
         <div class="docs-cards">
             <Card 
                 title="Installation"
                 desc="Guide on how to install GreenFrog step by step."
                 type="document"
                 href="/docs/installation"
+            />
+            <Card 
+                title="Getting Started"
+                desc="Create your first Minecraft Server."
+                type="document"
+                href="/docs/getting-started"
+            />
+            <Card 
+                title="Plugins"
+                desc="Creating your first plugin with the basic events..."
+                type="document"
+                href="/docs/plugins"
+            />
+            <Card 
+                title="Health"
+                desc="Change the player health."
+                type="document"
+                href="/docs/api/setHealth"
+            />
+            <Card 
+                title="Teleport"
+                desc="Teleport the player wherever you want."
+                type="document"
+                href="/docs/api/teleport"
+            />
+            <Card 
+                title="Speed"
+                desc="Make the player go faster"
+                type="document"
+                href="/docs/api/setSpeed"
+            />
+            <Card 
+                title="Hunger"
+                desc="Make the player starve or give it infinite food."
+                type="document"
+                href="/docs/api/setHunger"
             />
         </div>
     </main>
