--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -171,6 +171,7 @@ main p {
 
 .feature-cards,
 .docs-cards {
+    margin-top: 20px;
     color: #fff;
     text-decoration: none;
     width: 100%;
@@ -182,6 +183,9 @@ main p {
 
 .feature-cards .card,
 .docs-cards .card {
+    text-align: start;
+    color: #fff;
+    text-decoration: none;
     margin-top: 0px;
     width: 100%;
     height: 100%;
@@ -194,6 +198,9 @@ main p {
     padding: 1em;
     border-radius: 15px;
     background-color: rgb(21, 22, 29);
+}
+.card .content, .card .images {
+    margin-left: 0px;
 }
 
 @media (max-width: 1000px) {
