--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,6 +45,13 @@ import docs from "../stores/docs.json"
                 type="feature"
             />
         </div>
-        
+        <h1>
+            Contributors
+        </h1>
+        <div class="github-contributors">
+            <contributor-card>
+                <h2>Loading...</h2>
+            </contributor-card>
+        </div>
     </main>
 </Layout>
