Cleaner contributors section

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -247,19 +247,11 @@ main p {
 /*
     Contributors
 */
-.contributor-card {
-    color: #fff;
-    text-decoration: none;
-    padding: 16px;
+.github-contributors {
     width: 100%;
     display: flex;
     flex-direction: row;
-}
-.contributor-card img, .contributor-card h3 {
-    width: 100%;
-}
-.contributor-card h3 {
-    margin-left: 2.5em;
+    flex-wrap: wrap;
 }
 .contributor-card img {
     width: 48px;
