--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -248,6 +248,7 @@ main p {
     Contributors
 */
 .github-contributors {
+    padding-bottom: 50px;
     width: 100%;
     display: flex;
     flex-direction: row;
