--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ import docs from "../stores/docs.json"
         <h1>
             Contributors
         </h1>
-        <div class="github-contributors">
+        <div class="github-contributors" id="#contributors">
             <contributor-card>
                 <h2>Loading...</h2>
             </contributor-card>
