--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,6 +3,9 @@
         <div class="images">
             <a href="/">
                 <img src="/greenfrog.webp" alt="Logo of greenfrogmcbe">
+                <p>
+                    GreenFrog
+                </p>
             </a>
         </div>
         <div class="links">
