--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -57,6 +57,9 @@ body {
     min-height: 100vh;
     background-color: rgb(22, 23, 28);
 }
+html {
+    scrollbar-gutter: stable;
+}
 
 .warning {
     position: absolute;
