--- a/src/Layouts/Layout.astro
+++ b/src/Layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import "/public/styles/index.css"
+import ViewTransitions from "astro/components/ViewTransitions.astro";
+import "../styles/index.css"
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -8,24 +9,37 @@ import "/public/styles/index.css"
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GreenFrog: Minecraft Software</title>
         <link rel="icon" href="/greenfrog.webp">
-        <!--
-        <link rel="preload" href="/fonts/poppinsnormal.woff2" as="font" type="font/woff2" crossorigin="">
-        <link rel="preload" href="/fonts/poppins-bold2.woff2" as="font" type="font/woff2" crossorigin="">
-        -->
-        <script src="/js/views.js" defer></script>
-        <script defer>
-            const toggleSection = (element) => {
-                const allElements = document.querySelectorAll(element)
-    
-                allElements.forEach(el => {
-                    if (el.style.display === 'none') {
-                        el.style.display = 'flex'
-                    } else {
-                        el.style.display = 'none'
-                    }
+        <script is:inline>
+            document.addEventListener('astro:load', () => {
+            const Lazy = target => {
+                const io = new IntersectionObserver((entries, observer) => {
+                    entries.forEach(async entry => {
+                        if (entry.isIntersecting) {
+                            const req = await fetch(
+                            "https://api.github.com/repos/andriycraft/GreenFrogMCBE/contributors"
+                            )
+                            const contributors = await req.json()
+                            let DOMUpdate = ""
+
+                            contributors.forEach(contributor => {
+                            DOMUpdate += `
+                                <a href="${contributor.html_url}" target="_blank" class="contributor-card" rel="nofollow">
+                                <img src="${contributor.avatar_url}" alt="${contributor.login}'s github profile picture">
+                                </a>
+                            `
+                            })
+
+                            document.querySelector(".github-contributors").innerHTML = DOMUpdate
+                        }
+                    })
                 })
+                io.observe(target)
             }
+
+            document.querySelectorAll(".github-contributors").forEach(Lazy)
+        })
         </script>
+        <ViewTransitions />
     </head>
     <body>
         <slot />
