--- a/src/Layouts/Layout.astro
+++ b/src/Layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import ViewTransitions from "astro/components/ViewTransitions.astro";
+import { ViewTransitions } from "astro:transitions";
 import "../styles/index.css"
 ---
 <!DOCTYPE html>
