--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,11 @@
 ---
 ---
-<header>
-    <div class="wrap">
-        <h1>
+<header class="flex flex-col items-center justify-center min-h-[100vh] relative">
+    <div class="w-full text-center p-[16px]">
+        <h1 class="text-[45px] font-bold mb-[25px] lg:text-[35px] sm:text-[30px]">
             Make plugins with JavaScript
         </h1>
-        <p>
+        <p class="w-full max-w-[500px] m-auto text-zinc-300 text-center">
             Minecraft Server Software for creating high-performance JavaScript gameplay.
         </p>	
     </div>
